[gd_scene load_steps=6 format=3 uid="uid://bqy07w0i4c2xt"]

[ext_resource type="Script" path="res://tscns + scripts/tree.gd" id="1_0ljdq"]
[ext_resource type="Texture2D" uid="uid://b58fueah46jop" path="res://sprites/tree.png" id="1_gatrj"]
[ext_resource type="Texture2D" uid="uid://b6ici6jyvgmyl" path="res://sprites/button.png" id="2_sbn1u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fi4g8"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_6jjty"]
radius = 53.0094

[node name="tree" type="StaticBody2D"]
script = ExtResource("1_0ljdq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gatrj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fi4g8")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -19.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = 19.0
icon = ExtResource("2_sbn1u")
flat = true

[node name="use_zone" type="Area2D" parent="."]

[node name="detect" type="CollisionShape2D" parent="use_zone"]
shape = SubResource("CircleShape2D_6jjty")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="use_zone" to="." method="_on_use_zone_body_entered"]
[connection signal="body_exited" from="use_zone" to="." method="_on_use_zone_body_exited"]
